kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: mern-devops
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: atkaridarshan04/bookstore-backend:v2
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "256Mi"
              cpu: "0.25"
          livenessProbe:
            httpGet:
              path: /books
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /books
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 2000
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0



---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-devops
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      nodePort: 31100
