kubernetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: mern-devops
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: atkaridarshan04/bookstore-frontend:v1
          ports:
            - containerPort: 5173
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 5
            periodSeconds: 5        
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0


---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: mern-devops
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
      nodePort: 31000
