kubernetes/mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-deployment
  namespace: mern-devops
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  updateStrategy:
    type: RollingUpdate   
    rollingUpdate:
      partition: 0
  template:
    metadata:
      name: mongodb
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - name: mongodb-vol
              mountPath: /data/db        
      volumes:
        - name: mongodb-vol
          persistentVolumeClaim:
            claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mern-devops
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
